<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".StartActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/catch_the_ball"
        android:textSize="32sp" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp">

        <TableRow android:gravity="center_vertical">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:contentDescription="@string/pink"
                android:src="@drawable/pink" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:paddingEnd="0dp"
                android:paddingRight="0dp"
                android:text="@string/point"
                android:textSize="18sp" />

        </TableRow>

        <TableRow
            android:layout_marginTop="20dp"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:contentDescription="@string/orange"
                android:src="@drawable/orange" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:paddingEnd="0dp"
                android:paddingRight="0dp"
                android:text="@string/point"
                android:textSize="18sp" />

        </TableRow>

        <TableRow
            android:layout_marginTop="20dp"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:contentDescription="@string/black"
                android:src="@drawable/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:paddingEnd="0dp"
                android:paddingRight="0dp"
                android:text="@string/game_over"
                android:textSize="18sp" />

        </TableRow>

    </TableLayout>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:onClick="startGame"
        android:text="@string/start" />


</LinearLayout>